# raspigcd

./: .travis.yml  CMakeLists.txt  README.md  a_main.cpp  configure  defaults.json  example_config.json  getdeps.json  home.gcd  installcatch2.sh  off.gcd  pkg-config.pc.cmake  t.gcd  v1.json  v2.json  v3.json  v4.json  v5.json  v6.json
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: BUILD.md  CLI.md  COMMANDS.md  GUIDE.md  INTERACTIVE.md  noderunsample.js
include/: configuration.hpp  configuration_json.hpp  distance_t.hpp  factories.hpp  hardware_dof_conf.hpp  m_help.hpp  queue_t.hpp  steps_t.hpp  video.hpp
include/converters/: gcd_program_to_raw_gcd.hpp  gcd_program_to_steps.hpp
include/gcd/: gcode_interpreter.hpp  remove_g92_from_gcode.hpp
include/hardware/: low_buttons.hpp  low_spindles_pwm.hpp  low_steppers.hpp  low_timers.hpp  motor_layout.hpp  stepping.hpp  stepping_commands.hpp  thread_helper.hpp
include/hardware/driver/: inmem.hpp  low_buttons_fake.hpp  low_spindles_pwm_fake.hpp  low_timers_busy_wait.hpp  low_timers_fake.hpp  low_timers_wait_for.hpp  low_visualization_sdl.hpp  raspberry_pi.hpp
include/movement/: physics.hpp  simple_steps.hpp  steps_analyzer.hpp
src/: configuration.cpp  coordsystem.cpp  coordsystem.hpp  coordsystem_corexy.hpp  coordsystem_euclidean.hpp  distance_t.cpp  driver_raspberry_pi.cpp  driver_raspberry_pi.hpp  dto_ButtonsPiConfig.hpp  dto_CoordTranslateConfig.cpp  dto_CoordTranslateConfig.hpp  dto_GcodeEngineConfig.cpp  dto_GcodeEngineConfig.hpp  dto_MotorCommand.hpp  dto_SpindlePiConfig.hpp  dto_StepperPiConfig.hpp  dto_Steps.hpp  factories.cpp  gcd_commands.cpp  gcd_commands.cpp.orig  gcd_commands.hpp  gcd_engine.cpp  gcd_engine.hpp  i_CoordTranslate.cpp  i_CoordTranslate.hpp  i_CoordTranslate_factory.cpp  i_CoordTranslate_factory.hpp  i_Machine.hpp  i_MotorMoves.cpp  i_MotorMoves_factory.cpp  i_MotorMoves_factory.hpp  json_parameters.hpp  legacy_mode.cpp_  m_help.cpp  m_hwmoves.cpp  m_hwmoves.hpp  m_motor_interface.hpp  m_motor_rpi.cpp  m_motor_rpi.hpp  machine.cpp  (+12 more)
src/converters/: gcd_program_to_raw_gcd.cpp  gcd_program_to_steps.cpp
src/gcd/: gcode_interpreter.cpp  remove_g92_from_gcode.cpp
src/hardware/: motor_layout.cpp  stepping.cpp  thread_helper.cpp
src/hardware/driver/: inmem.cpp  low_timers_busy_wait.cpp  low_timers_fake.cpp  low_timers_wait_for.cpp  raspberry_pi.cpp
src/movement/: physics.cpp  simple_steps.cpp  steps_analyzer.cpp
tests/: configuration_test.cpp  distance_t_test.cpp  problem_1.gcd  problem_2.gcd  problem_3.gcd  tdd_helpers.cpp  tdd_helpers.hpp  test.gcd  tests.cpp  tests_helper.hpp  unit_coordsystem.cpp  unit_gcd_commands.cpp  unit_gcd_engine.cpp  unit_gcd_engine_gcdtest.gcd  unit_gcd_engine_imgsave.cpp  unit_m_motor.cpp  unit_machine.cpp
tests/converters/: gcd_program_to_raw_gcd_test.cpp  gcd_program_to_steps_test.cpp
tests/gcd/: gcode_interpreter_apply_machine_limits_test.cpp  gcode_interpreter_command_to_map_of_arguments_test.cpp  gcode_interpreter_g0_move_to_g1_sequence_test.cpp  gcode_interpreter_g1_move_to_g1_sequence_with_limits_test.cpp  gcode_interpreter_gcode_to_maps_of_arguments_test.cpp  gcode_interpreter_group_gcode_commands_test.cpp  gcode_interpreter_insert_additional_nodes_inbetween_test.cpp  gcode_interpreter_merge_blocks_test.cpp  gcode_interpreter_optimize_path_douglas_peucker_test.cpp  remove_g4_from_gcode_test.cpp
tests/hardware/: stepping_sim_test.cpp  stepping_simple_timer_test.cpp  stepping_test.cpp
tests/movement/: physics_test.cpp  simple_steps_test.cpp  variable_speed_calculate_linear_coefficient_from_limits_test.cpp
v0.9.1.final.archive/: .travis.yml  README.md
v0.9.1.final.archive/src/: dto_CoordTranslateConfig.cpp  dto_CoordTranslateConfig.hpp  dto_GcodeEngineConfig.hpp  dto_MotorCommand.hpp  dto_Steps.hpp  i_Buttons.cpp  i_Buttons.hpp  i_MotorMoves.hpp  i_Spindle.hpp  i_Stepper.hpp  raspigcd.hpp  s_CoordTranslateCoreXY.hpp  s_CoordTranslateSimple.hpp  s_GcdCommandsInterpreter.cpp  s_GcdCommandsInterpreter.hpp  s_GcodeEngine.hpp
v0.9.1.final.archive/tests/: tdd_helpers.hpp  unit_coordsystem.cpp  unit_gcd_engine.cpp  unit_m_motor.cpp
